--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@ HTML structures the form elements, ensuring a clean and organized layout for use
           <div class="footer__socials">
 
             <a
-              href="@https://x.com/TakbhateOm "
+              href="https://x.com/TakbhateOm"
               target="__blank"
               class="footer__social"
             >
