--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <div class="home__content grid">
             <div class="home__social">
               <a
-                href="https://www.linkedin.com/in/om-t-44a3762b3/"
+                href="https://www.linkedin.com/in/om-takbhate-2b722829a/"
                 target="_blank"
                 class="home__social-icon"
               >
