--- a/index.html
+++ b/index.html
@@ -564,6 +564,35 @@
 
               <div class="portfolio__data">
                 <h3 class="portfolio__title">
+                  WanderLust 
+                </h3>
+                <p class="portfolio__description">
+                  WanderLust is a property listings website that enables property owners to list their properties for sale or rent, providing essential details such as location and price. The platform is designed to help tourists and travelers easily find accommodation options based on their needs.
+                </p>
+                <a
+                  href="https://github.com/Om-Takbhate/WanderLust"
+                  class="button button--flex button--small portfolio__button"
+                >
+                  GitHub Repository
+                  <i class="uil uil-external-link-alt button__icon"></i>
+                </a>
+                <a
+                  href="https://wanderlusthub.vercel.app/listings"
+                  class="button button--flex button--small portfolio__button"
+                >
+                  See Live
+                  <i class="uil uil-external-link-alt button__icon"></i>
+                </a>
+              </div>
+            </div>
+
+                <!--  PORTFOLIO 3              -->
+
+            <div class="portfolio__content grid swiper-slide">
+              <img src="assets/img/portfolio1.png" class="portfolio__img" />
+
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">
                   Responsive-Weather-Forecast-Website
                 </h3>
                 <p class="portfolio__description">
