--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
               </a>
             </li>
             <li class="nav__item">
+              <a href="http://localhost:3000/app" class="nav__link">
+                <i class="uil uil-scenery nav__icon"></i>Link@
+              </a>
+            </li>
+            <li class="nav__item">
               <a href="#contact" class="nav__link">
                 <i class="uil uil-message nav__icon"></i>Contact-Me
               </a>
